--- a/prana-elastic-kibana.yml
+++ b/prana-elastic-kibana.yml
@@ -8,17 +8,6 @@ services:
     networks:
       - elastic
 
-  prana-elastic:
-    image: joakimfristedt/prana
-    container_name: prana-elastic
-    ports:
-      - 8078
-    networks:
-      - elastic
-    environment:
-      - EUREKA_NAME=elasticsearch
-      - EUREKA_PORT=9200
-
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.6.1
     container_name: elasticsearch
@@ -32,6 +21,21 @@ services:
     environment:
       - discovery.type=single-node 
       - cluster.name=elastic
+
+  prana-elastic:
+    image: joakimfristedt/prana
+    container_name: prana-elastic
+    ports:
+      - 8078
+    networks:
+      - elastic
+    depends_on:
+      - eureka
+      - elasticsearch
+    environment:
+      - EUREKA_NAME=elasticsearch
+      - EUREKA_PORT=9200
+      - EUREKA_VIP_ADDRESS=elasticsearch
 
   kibana:
     image: docker.elastic.co/kibana/kibana-oss:6.6.1
@@ -48,9 +52,13 @@ services:
       - 8078
     networks:
       - elastic
+    depends_on:
+      - eureka
+      - kibana
     environment:
       - EUREKA_NAME=kibana
       - EUREKA_PORT=5601
+      - EUREKA_VIP_ADDRESS=kibana
 
 networks:
   elastic:
